frontend/build_output.txt

> frontend@0.0.0 build
> vite build

vite v8.0.3 building client environment for production...
[2Ktransforming...✓ 3568 modules transformed.
✗ Build failed in 910ms
error during build:
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Invalid state
16184 |    border-color: #ff3b30;
16185 |  }
16186 |  .ft-flow-card.has-photo > *:not(.ft-handle):not(::before):not(::after) {
      |                                                          ^
16187 |    position: relative;
16188 |    z-index: 1;
    at Module.<anonymous> (/Users/shajinva/Documents/D2C /Codes/Finance/frontend/node_modules/lightningcss/node/index.js:56:14)
    at minifyCSS (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/vite/dist/node/chunks/node.js:21202:59)
    at async finalizeCss (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/vite/dist/node/chunks/node.js:21048:36)
    at async Promise.all (index 1)
    at async Object.run (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/vite/dist/node/chunks/node.js:20587:19)
    at async plugin (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1234:16)
    at async plugin.<computed> (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1593:12)
    at aggregateBindingErrorsIntoJsError (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:48:18)
    at unwrapBindingResult (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:18:128)
    at #build (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/rolldown/dist/shared/rolldown-build-CPrIX9V6.mjs:3313:34)
    at async buildEnvironment (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/vite/dist/node/chunks/node.js:32849:64)
    at async Object.build (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/vite/dist/node/chunks/node.js:33271:19)
    at async Object.buildApp (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/vite/dist/node/chunks/node.js:33268:153)
    at async CAC.<anonymous> (file:///Users/shajinva/Documents/D2C%20/Codes/Finance/frontend/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
